--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "test"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.2",
+    "morgan": "^1.8.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "mongoose": "^4.10.5"
   },
   "scripts": {
     "test": "mocha",
