--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0"
