--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.15.3",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
