--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "test"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.3",
