--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.3",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
